fix: adjust position of main element for improved layout alignment

--- a/addTask/addTask.css
+++ b/addTask/addTask.css
@@ -280,7 +280,7 @@ main {
     width: 350px;
     position: fixed;
     border-radius: 20px;
-    left: 45%;
+    left: 30%;
     bottom: -100px;
     transform: translateX(-50%);
     transition: all 125ms ease-in-out;
